<resources>
    <string name="pass_hint">Mật khẩu</string>
    <string name="account_hint">Tài khoản</string>
    <string name="background_hint">background</string>
    <string name="login_button">Đăng nhập</string>
    <string name="forget_account">Quên mật khẩu?</string>
    <string name="help">Trợ giúp?</string>
    <string name="add_customer">Thêm khách hàng</string>
    <string name="add_leader">Thêm khách hàng tiềm năng</string>
    <string name="red_notice">Bạn không được bỏ trống mục này</string>
    <string name="app_name">DuAnCRM</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="string_leads">Tiềm năng</string>
    <string name="string_customers">Khách hàng</string>
    <string name="string_labels">Nhãn hiệu</string>
    <string name="string_tasks">Nhiệm vụ</string>
    <string name="string_graph">Đồ thị</string>
    <string name="add_account">Thêm tài khoản</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="delete_account">Xóa tài khoản</string>
    <string name="username_input">Nhập tên tài khoản</string>
    <string name="pass_input">Nhập mật khẩu</string>
    <string name="reinput_pass">Nhập lại mật khẩu</string>


</resources>
